--- a/client/index.html
+++ b/client/index.html
@@ -2,8 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="favicon.icon" />
+    <link rel="icon" type="/svg+xml" href="/client/public/favicon.icon" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
     <title>Lakshmi Tunes</title>
   </head>
   <body>
